--- a/GeneScope/frontend/pages/homepage/HomePage.css
+++ b/GeneScope/frontend/pages/homepage/HomePage.css
@@ -52,7 +52,7 @@ html, body, .App {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start; 
-  margin-left: 240px; 
+  margin-left: 0px; 
   background-color: #f7faff; 
   height: 100vh; 
   overflow: auto;
