--- a/GeneScope/frontend/pages/myfiles/MyFiles.css
+++ b/GeneScope/frontend/pages/myfiles/MyFiles.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-left: 240px; /* Add this line to create space for the navbar */
+  margin-left: 0px; /* Add this line to create space for the navbar */
   background-color: #f7faff;
   overflow: auto;
   overflow-x: hidden;
